# cc-usage

./: .gitignore  CLAUDE.md  README.md  package-lock.json  package.json
claude-usage-bar/: .gitignore  CLAUDE.md  package-lock.json  package.json
claude-usage-bar/docs/: system-design.md
claude-usage-bar/src-tauri/: Cargo.toml  tauri.conf.json
claude-usage-bar/src-tauri/src/: lib.rs
docs/: system-design.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
